src/objects/QIPP_Benefit_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Line Item</label>
        <referenceTo>QIPP_BU_Reporting__c</referenceTo>
        <relationshipLabel>Benefit History Tracking</relationshipLabel>
        <relationshipName>Benefit_History_Tracking_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <referenceTo>QIPP_Benefit__c</referenceTo>
        <relationshipLabel>Benefit History Tracking</relationshipLabel>
        <relationshipName>Benefit_History_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>History_Tracking_For_Initial_Line_Items__c</fullName>
        <label>Line Items Initial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>History_Tracking_For_Line_Items__c</fullName>
        <label>Line Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <label>Benefit History Tracking</label>
    <nameField>
        <displayFormat>BHT#-{0000000}</displayFormat>
        <label>Benefit History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit History Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>